docs: update code

--- a/pom.xml
+++ b/pom.xml
@@ -19,15 +19,20 @@
         <module>cloud-providerconsul-payment8006</module>
         <module>cloud-consumerconsul-order82</module>
         <module>cloud-consumer-feign-order83</module>
-        <module>cloud-consumer-feign-order80</module>
+<!--        <module>cloud-consumer-feign-order80</module>-->
         <module>cloud-provider-hystrix-payment8001</module>
         <module>cloud-consumer-feign-hystrix-order80</module>
         <module>cloud-consumer-hystrix-dashboard9001</module>
-        <module>cloud-zuul-gateway9527</module>
-        <module>cloud-config-center-3344</module>
+<!--        <module>cloud-zuul-gateway9527</module>-->
+<!--        <module>cloud-config-center-3344</module>-->
         <module>cloud-config-client-3355</module>
         <module>cloud-config-client-3366</module>
-        <module>cloud-config-client-3377</module>
+<!--        <module>cloud-config-client-3377</module>-->
+        <module>cloud-stream-rabbitmq-provider8801</module>
+        <module>cloud-stream-rabbitmq-consumer8802</module>
+        <module>cloudalibaba-provider-payment9001</module>
+        <module>cloudalibaba-consumer-nacos-order83</module>
+        <module>cloudalibaba-config-nacos-client3377</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -47,6 +52,15 @@
     <!-- 子模块继承之后，提供作用：锁定版本+子modlue不用写groupId和version  -->
     <dependencyManagement>
         <dependencies>
+            <!--spring cloud alibaba-->
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>2.1.0.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
             <!--spring boot 2.2.2-->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
