--- a/cloudalibaba-provider-payment9002/src/main/resources/application.yml
+++ b/cloudalibaba-provider-payment9002/src/main/resources/application.yml
@@ -7,7 +7,8 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 192.168.75.128:8848 #配置Nacos地址
+#        server-addr: 192.168.75.128:8848 #配置Nacos地址
+        server-addr: 192.168.75.128:1111 #配置Nacos地址
 
 management:
   endpoints:
