--- a/cloudalibaba-sentinel-service8401/src/main/resources/application.yml
+++ b/cloudalibaba-sentinel-service8401/src/main/resources/application.yml
@@ -8,13 +8,22 @@ spring:
     nacos:
       discovery:
         #Nacos服务注册中心地址
-        server-addr: 192.168.75.128:8848
+        server-addr: 172.16.180.129:8848
     sentinel:
       transport:
         #配置Sentinel dashboard地址
-        dashboard: 192.168.75.128:8080
+        dashboard: 172.16.180.129:8080
         #默认8719端口，假如被占用会自动从8719开始依次+1扫描,直至找到未被占用的端口
         port: 8719
+
+      datasource:
+        ds1:
+          nacos:
+            server-addr: 172.16.180.129:8848
+            dataId: cloudalibaba-sentinel-service
+            groupId: DEFAULT_GROUP
+            data-type: json
+            rule-type: flow
 
 management:
   endpoints:
